// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card card does not break if test and emjoi does not show up 1`] = `
<div
  className="card"
>
  <span>
     
  </span>
  <button
    onClick={[Function]}
  >
     Delete 
  </button>
</div>
`;

exports[`Card card must work with test and emoji passed in as string 1`] = `
<div
  className="card"
>
  <span>
    hello testing card
     
    heart_eyes
  </span>
  <button
    onClick={[Function]}
  >
     Delete 
  </button>
</div>
`;
